--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@angular/platform-browser": "~9.1.7",
     "@angular/platform-browser-dynamic": "~9.1.7",
     "@angular/router": "~9.1.7",
+    "@sweetalert2/ngx-sweetalert2": "^8.1.1",
+    "@types/jquery": "^3.5.0",
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
+    "sweetalert2": "^9.17.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
